--- a/index/index.css
+++ b/index/index.css
@@ -3,13 +3,19 @@
   left: 0;
   margin: 0;
 }
+html{
+  height: 100vh;
+}
+body{
+  height: 100vh;
+}
 
 .BG {
   position: relative;
   background-image: url('../img/webBG.png');
   background-size: 64px;
   width: 100%;
-  min-height: 1080px;
+  height: 100%;
   min-width: 720px;
 }
 
@@ -84,6 +90,11 @@
   height: 100%;
 }
 
+
+#fgf{
+  height: 120px;
+  width: 100%;
+}
 .bottom {
   position: absolute;
   top: auto;
