--- a/index/index.css
+++ b/index/index.css
@@ -5,9 +5,11 @@
 }
 html{
   height: 100vh;
+  min-height: 300px;
 }
 body{
   height: 100vh;
+  min-height: 300px;
 }
 
 .BG {
@@ -16,6 +18,7 @@ body{
   background-size: 64px;
   width: 100%;
   height: 100%;
+  min-height: 300px;
   min-width: 720px;
 }
 
