--- a/index/index.css
+++ b/index/index.css
@@ -4,22 +4,19 @@
   margin: 0;
 }
 html{
-  height: 100vh;
-  min-height: 300px;
+  height: 100%;
 }
 body{
-  height: 100vh;
-  min-height: 300px;
+  height: 100%;
 }
-
 .BG {
   position: relative;
   background-image: url('../img/webBG.png');
   background-size: 64px;
   width: 100%;
-  height: 100%;
-  min-height: 300px;
+  min-height: 100%;
   min-width: 720px;
+  padding-bottom: 90px;
 }
 
 .navBar {
@@ -75,6 +72,7 @@ body{
   width: 100%;
   min-width: 720px;
   padding-top: 25%;
+  margin-bottom: 20px;
 }
 
 .templateImg {
@@ -93,17 +91,19 @@ body{
   height: 100%;
 }
 
+.textLeft{
+  left: 10%;
+}
 
-#fgf{
-  height: 120px;
-  width: 100%;
+.imgRight{
+  left: 24.9%;
 }
 .bottom {
-  position: absolute;
-  top: auto;
-  bottom: 0px;
   background-color: #004209;
   width: 100%;
   min-width: 720px;
   height: 90px;
+  bottom: 0;
+  top: auto;
+  position: absolute;
 }
